# Mono-Base

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
include/mono_base/core/: config.hpp  hooks.hpp  logger.hpp
include/mono_base/features/: example_hook.hpp
include/mono_base/mono/: helpers.hpp  resolver.hpp
include/mono_base/mono/resolver/: types.hpp  types.inl.hpp
include/mono_base/mono/resolver/detail/: api.hpp
include/mono_base/ui/: d3d11_state.hpp  graphics_api.hpp  menu.hpp  overlay.hpp  overlay_common.hpp  present_bridge.hpp  renderer.hpp  theme.hpp
include/mono_base/ui/backends/: dxgi_hook.hpp  renderer_factory.hpp
scripts/: setup_deps.ps1
src/: dllmain.cpp
src/features/: example_hook.cpp
src/mono/: api.cpp
src/ui/: menu.cpp  overlay.cpp  present_bridge.cpp  renderer.cpp
src/ui/backends/: auto_renderer.cpp  dx11_renderer.cpp  dx12_renderer.cpp  dxgi_hook.cpp  opengl_renderer.cpp  vulkan_renderer.cpp
